install_sub = install_base / 'msl/MSL_C'

sources = [
  'MSL_ARM/Src/abort_exit_ARM.c',
  'MSL_ARM/Src/critical_regions_NITRO.c',
  'MSL_ARM/Src/fenv_arm.c',
  'MSL_ARM/Src/fenv_arm_ms.c',
  'MSL_ARM/Src/float_exceptions.c',
  'MSL_ARM/Src/math_ARM.c',
  'MSL_Common/Src/alloc.c',
  'MSL_Common/Src/ansi_files.c',
  'MSL_Common/Src/arith.c',
  'MSL_Common/Src/assert.c',
  'MSL_Common/Src/bsearch.c',
  'MSL_Common/Src/buffer_io.c',
  'MSL_Common/Src/char_io.c',
  'MSL_Common/Src/ctype.c',
  'MSL_Common/Src/direct_io.c',
  'MSL_Common/Src/errno.c',
  'MSL_Common/Src/file_io.c',
  'MSL_Common/Src/file_pos.c',
  'MSL_Common/Src/float.c',
  'MSL_Common/Src/locale.c',
  'MSL_Common/Src/math.c',
  'MSL_Common/Src/mbstring.c',
  'MSL_Common/Src/mem.c',
  'MSL_Common/Src/mem_funcs.c',
  'MSL_Common/Src/misc_io.c',
  'MSL_Common/Src/pool_alloc.c',
  'MSL_Common/Src/printf.c',
  'MSL_Common/Src/qsort.c',
  'MSL_Common/Src/rand.c',
  'MSL_Common/Src/scanf.c',
  'MSL_Common/Src/signal.c',
  'MSL_Common/Src/string.c',
  'MSL_Common/Src/strtold.c',
  'MSL_Common/Src/strtoul.c',
  'MSL_Common/Src/time.c',
  'MSL_Common/Src/wchar_io.c',
  'MSL_Common/Src/wcstold.c',
  'MSL_Common/Src/wcstoul.c',
  'MSL_Common/Src/wctrans.c',
  'MSL_Common/Src/wctype.c',
  'MSL_Common/Src/wfile_io.c',
  'MSL_Common/Src/wmem.c',
  'MSL_Common/Src/wprintf.c',
  'MSL_Common/Src/wscanf.c',
  'MSL_Common/Src/wstring.c',
  'MSL_Common/Src/wtime.c',
  'MSL_Common_Embedded/Math/Double_precision/e_acos.c',
  'MSL_Common_Embedded/Math/Double_precision/e_acosh.c',
  'MSL_Common_Embedded/Math/Double_precision/e_asin.c',
  'MSL_Common_Embedded/Math/Double_precision/e_atan2.c',
  'MSL_Common_Embedded/Math/Double_precision/e_atanh.c',
  'MSL_Common_Embedded/Math/Double_precision/e_cosh.c',
  'MSL_Common_Embedded/Math/Double_precision/e_exp.c',
  'MSL_Common_Embedded/Math/Double_precision/e_fmod.c',
  'MSL_Common_Embedded/Math/Double_precision/e_gamma.c',
  'MSL_Common_Embedded/Math/Double_precision/e_gamma_r.c',
  'MSL_Common_Embedded/Math/Double_precision/e_hypot.c',
  'MSL_Common_Embedded/Math/Double_precision/e_lgamma.c',
  'MSL_Common_Embedded/Math/Double_precision/e_lgamma_r.c',
  'MSL_Common_Embedded/Math/Double_precision/e_log.c',
  'MSL_Common_Embedded/Math/Double_precision/e_log10.c',
  'MSL_Common_Embedded/Math/Double_precision/e_pow.c',
  'MSL_Common_Embedded/Math/Double_precision/e_rem_pio2.c',
  'MSL_Common_Embedded/Math/Double_precision/e_remainder.c',
  'MSL_Common_Embedded/Math/Double_precision/e_sinh.c',
  'MSL_Common_Embedded/Math/Double_precision/e_sqrt.c',
  'MSL_Common_Embedded/Math/Double_precision/fminmaxdim.c',
  'MSL_Common_Embedded/Math/Double_precision/k_cos.c',
  'MSL_Common_Embedded/Math/Double_precision/k_rem_pio2.c',
  'MSL_Common_Embedded/Math/Double_precision/k_sin.c',
  'MSL_Common_Embedded/Math/Double_precision/k_standard.c',
  'MSL_Common_Embedded/Math/Double_precision/k_tan.c',
  'MSL_Common_Embedded/Math/Double_precision/s_asinh.c',
  'MSL_Common_Embedded/Math/Double_precision/s_atan.c',
  'MSL_Common_Embedded/Math/Double_precision/s_cbrt.c',
  'MSL_Common_Embedded/Math/Double_precision/s_ceil.c',
  'MSL_Common_Embedded/Math/Double_precision/s_copysign.c',
  'MSL_Common_Embedded/Math/Double_precision/s_cos.c',
  'MSL_Common_Embedded/Math/Double_precision/s_erf.c',
  'MSL_Common_Embedded/Math/Double_precision/s_expm1.c',
  'MSL_Common_Embedded/Math/Double_precision/s_fabs.c',
  'MSL_Common_Embedded/Math/Double_precision/s_floor.c',
  'MSL_Common_Embedded/Math/Double_precision/s_frexp.c',
  'MSL_Common_Embedded/Math/Double_precision/s_ilogb.c',
  'MSL_Common_Embedded/Math/Double_precision/s_ldexp.c',
  'MSL_Common_Embedded/Math/Double_precision/s_lib_version.c',
  'MSL_Common_Embedded/Math/Double_precision/s_log1p.c',
  'MSL_Common_Embedded/Math/Double_precision/s_logb.c',
  'MSL_Common_Embedded/Math/Double_precision/s_matherr.c',
  'MSL_Common_Embedded/Math/Double_precision/s_modf.c',
  'MSL_Common_Embedded/Math/Double_precision/s_nextafter.c',
  'MSL_Common_Embedded/Math/Double_precision/s_rint.c',
  'MSL_Common_Embedded/Math/Double_precision/s_signgam.c',
  'MSL_Common_Embedded/Math/Double_precision/s_sin.c',
  'MSL_Common_Embedded/Math/Double_precision/s_tan.c',
  'MSL_Common_Embedded/Math/Double_precision/s_tanh.c',
  'MSL_Common_Embedded/Math/Double_precision/w_acos.c',
  'MSL_Common_Embedded/Math/Double_precision/w_acosh.c',
  'MSL_Common_Embedded/Math/Double_precision/w_asin.c',
  'MSL_Common_Embedded/Math/Double_precision/w_atan2.c',
  'MSL_Common_Embedded/Math/Double_precision/w_atanh.c',
  'MSL_Common_Embedded/Math/Double_precision/w_cosh.c',
  'MSL_Common_Embedded/Math/Double_precision/w_exp.c',
  'MSL_Common_Embedded/Math/Double_precision/w_fmod.c',
  'MSL_Common_Embedded/Math/Double_precision/w_gamma.c',
  'MSL_Common_Embedded/Math/Double_precision/w_gamma_r.c',
  'MSL_Common_Embedded/Math/Double_precision/w_hypot.c',
  'MSL_Common_Embedded/Math/Double_precision/w_lgamma.c',
  'MSL_Common_Embedded/Math/Double_precision/w_lgamma_r.c',
  'MSL_Common_Embedded/Math/Double_precision/w_log.c',
  'MSL_Common_Embedded/Math/Double_precision/w_log10.c',
  'MSL_Common_Embedded/Math/Double_precision/w_pow.c',
  'MSL_Common_Embedded/Math/Double_precision/w_remainder.c',
  'MSL_Common_Embedded/Math/Double_precision/w_sinh.c',
  'MSL_Common_Embedded/Math/Double_precision/w_sqrt.c',
  'MSL_Common_Embedded/Src/ansi_fp.c',
  'MSL_Common/Src/critical_regions_pthreads.c',
  'MSL_Common/Src/thread_local_data_pthreads.c',
  'MSL_Common/Src/math_api.c',
  'MSL_Common/Src/math_fma.c',
  'MSL_Common_Embedded/Src/math_sun.c',
  'MSL_ARM/Src/pool_alloc.NITRO.c'
]

headers_gen = []

MSL_C_NITRO_dep = declare_dependency(
  sources: headers_gen,
  include_directories: [
    'MSL_Common/Include',
    'MSL_ARM/Include'
  ]
)

dependencies = [
  MSL_C_NITRO_dep
]

include_dirs = [
  'MSL_Common_Embedded/Math/Include',
  '../MSL_Extras/MSL_Common/Include',
  '../../../NitroSDK/include'
]

args = [
  args_base,
  '-char', 'signed',
  '-Cpp_exceptions', 'on',
  '-prefix', 'PREFIX_NITRO.h'
]

MSL_C_NITRO_libs = []
foreach var_suff, var_args : lib_variants
  var_sources = sources

  lib_in = static_library('MSL_C_NITRO_' + var_suff, var_sources,
    c_args: [args, var_args],
    cpp_args: [args, var_args],
    dependencies: dependencies,
    include_directories: include_dirs,
    build_by_default: false,
    pic: false,
    name_prefix: '',
    name_suffix: 'a.in')

  MSL_C_NITRO_libs += custom_target(
    input: lib_in,
    output: 'MSL_C_NITRO_' + var_suff + '.a',
    command: [fixar, '@OUTPUT@', '@INPUT@', var_sources],
    install: true,
    install_dir: install_sub / 'MSL_ARM/Lib')
endforeach

install_headers(
  'MSL_ARM/Include/PREFIX_NITRO.h',
  'MSL_ARM/Include/ansi_prefix.ARM.h',
  'MSL_ARM/Include/ansi_prefix.ARM.size.h',
  'MSL_ARM/Include/critical_regions.NITRO.h',
  'MSL_ARM/Include/fenv.ARM.h',
  'MSL_ARM/Include/float.ARM.h',
  'MSL_ARM/Include/math.ARM.h',
  'MSL_ARM/Include/setjmp.ARM.h',
  'MSL_ARM/Include/stdarg.ARM.h',
  install_dir: install_sub / 'MSL_ARM/Include')

install_headers(
  'MSL_Common/Include/abort_exit.h',
  'MSL_Common/Include/ansi_files.h',
  'MSL_Common/Include/ansi_fp.h',
  'MSL_Common/Include/ansi_parms.h',
  'MSL_Common/Include/arith.h',
  'MSL_Common/Include/assert.h',
  'MSL_Common/Include/assert_api.h',
  'MSL_Common/Include/buffer_io.h',
  'MSL_Common/Include/cassert',
  'MSL_Common/Include/cctype',
  'MSL_Common/Include/cerrno',
  'MSL_Common/Include/cfloat',
  'MSL_Common/Include/char_io.h',
  'MSL_Common/Include/cinttypes',
  'MSL_Common/Include/ciso646',
  'MSL_Common/Include/climits',
  'MSL_Common/Include/clocale',
  'MSL_Common/Include/cmath',
  'MSL_Common/Include/complex.h',
  'MSL_Common/Include/console_io.h',
  'MSL_Common/Include/critical_regions.h',
  'MSL_Common/Include/critical_regions.pthreads.h',
  'MSL_Common/Include/csetjmp',
  'MSL_Common/Include/csignal',
  'MSL_Common/Include/cstdarg',
  'MSL_Common/Include/cstddef',
  'MSL_Common/Include/cstdint',
  'MSL_Common/Include/cstdio',
  'MSL_Common/Include/cstdlib',
  'MSL_Common/Include/cstring',
  'MSL_Common/Include/ctime',
  'MSL_Common/Include/ctype.h',
  'MSL_Common/Include/ctype_api.h',
  'MSL_Common/Include/cwchar',
  'MSL_Common/Include/cwctype',
  'MSL_Common/Include/div_t.h',
  'MSL_Common/Include/eof.h',
  'MSL_Common/Include/errno.h',
  'MSL_Common/Include/fenv.h',
  'MSL_Common/Include/file_io.h',
  'MSL_Common/Include/file_struc.h',
  'MSL_Common/Include/float.h',
  'MSL_Common/Include/inttypes.h',
  'MSL_Common/Include/iso646.h',
  'MSL_Common/Include/lconv.h',
  'MSL_Common/Include/limits.h',
  'MSL_Common/Include/limits_api.h',
  'MSL_Common/Include/locale.h',
  'MSL_Common/Include/locale_api.h',
  'MSL_Common/Include/math.h',
  'MSL_Common/Include/math_api.h',
  'MSL_Common/Include/math_config.h',
  'MSL_Common/Include/math_integral.h',
  'MSL_Common/Include/mbstring.h',
  'MSL_Common/Include/mem_funcs.h',
  'MSL_Common/Include/misc_io.h',
  'MSL_Common/Include/mslGlobals.h',
  'MSL_Common/Include/msl_c_version.h',
  'MSL_Common/Include/msl_cpp_std_ctype.h',
  'MSL_Common/Include/msl_cpp_std_inttypes.h',
  'MSL_Common/Include/msl_cpp_std_locale.h',
  'MSL_Common/Include/msl_cpp_std_math.h',
  'MSL_Common/Include/msl_cpp_std_setjmp.h',
  'MSL_Common/Include/msl_cpp_std_signal.h',
  'MSL_Common/Include/msl_cpp_std_stdarg.h',
  'MSL_Common/Include/msl_cpp_std_stddef.h',
  'MSL_Common/Include/msl_cpp_std_stdint.h',
  'MSL_Common/Include/msl_cpp_std_stdio.h',
  'MSL_Common/Include/msl_cpp_std_stdlib.h',
  'MSL_Common/Include/msl_cpp_std_string.h',
  'MSL_Common/Include/msl_cpp_std_time.h',
  'MSL_Common/Include/msl_cpp_std_wchar.h',
  'MSL_Common/Include/msl_cpp_std_wctype.h',
  'MSL_Common/Include/msl_rsize_t.h',
  'MSL_Common/Include/msl_secure.h',
  'MSL_Common/Include/msl_secure_error.h',
  'MSL_Common/Include/msl_t.h',
  'MSL_Common/Include/msl_thread_local_data.h',
  'MSL_Common/Include/null.h',
  'MSL_Common/Include/os_enum.h',
  'MSL_Common/Include/pool_alloc.h',
  'MSL_Common/Include/setjmp.h',
  'MSL_Common/Include/signal.h',
  'MSL_Common/Include/size_t.h',
  'MSL_Common/Include/stdarg.h',
  'MSL_Common/Include/stdbool.h',
  'MSL_Common/Include/stddef.h',
  'MSL_Common/Include/stdint.h',
  'MSL_Common/Include/stdio.h',
  'MSL_Common/Include/stdio.posix.h',
  'MSL_Common/Include/stdio_api.h',
  'MSL_Common/Include/stdlib.h',
  'MSL_Common/Include/string.h',
  'MSL_Common/Include/string_api.h',
  'MSL_Common/Include/strtold.h',
  'MSL_Common/Include/strtoul.h',
  'MSL_Common/Include/tgmath.h',
  'MSL_Common/Include/thread_local_data_pthreads.h',
  'MSL_Common/Include/time.h',
  'MSL_Common/Include/time_api.h',
  'MSL_Common/Include/va_list.h',
  'MSL_Common/Include/wchar.h',
  'MSL_Common/Include/wchar_io.h',
  'MSL_Common/Include/wchar_t.h',
  'MSL_Common/Include/wcstold.h',
  'MSL_Common/Include/wcstoul.h',
  'MSL_Common/Include/wctrans.h',
  'MSL_Common/Include/wctype.h',
  'MSL_Common/Include/wctype_api.h',
  'MSL_Common/Include/weof.h',
  'MSL_Common/Include/wmem.h',
  'MSL_Common/Include/wprintf.h',
  'MSL_Common/Include/wscanf.h',
  'MSL_Common/Include/wstdio.h',
  'MSL_Common/Include/wstring.h',
  'MSL_Common/Include/wtime.h',
  install_dir: install_sub / 'MSL_Common/Include')

install_headers(
  'MSL_Common_Embedded/Math/Include/fdlibm.h',
  install_dir: install_sub / 'MSL_Common_Embedded/Math/Include')
